--- a/src/Biblioteca/TegBundle/Resources/views/teg/show.html.twig
+++ b/src/Biblioteca/TegBundle/Resources/views/teg/show.html.twig
@@ -73,14 +73,15 @@
             </div>
         </div>
         <div id="capitulo" class="tab-pane fade" ng-init="initViewer('{{ asset('bundles/bibliotecateg/js/viewer.js/index.html') }}')">
+            <i class="fa fa-files-o fa-lg"></i>
             <select class="btn btn-default" ng-model="chapterSelected" placeholder="Archivos">
                 {% for iField in entity.capitulos %}
-                <option ng-init="addChapter({{ loop.index0 }}, '{{ asset('uploads/capitulos/capitulo' ~ loop.index ~ '.pdf') }}','{{iField.name}}');" value="[[chapters[{{ loop.index0 }}].url]]" {% if loop.index0 == 0 %}ng-selected="true"{% endif %}>[[chapters[{{ loop.index0 }}].name]]</option>
+                <option ng-init="addChapter({{ loop.index0 }}, '{{ asset('uploads/capitulos/capitulo' ~ loop.index ~ '.pdf') }}','{{iField.name}}');" value="[[chapters[{{ loop.index0 }}].url]]" {% if loop.index0 == 0 %}selected="selected"{% endif %}>[[chapters[{{ loop.index0 }}].name]]</option>
                 {% endfor %}
             </select>
-            <a class="btn btn-default" download ng-href="[[detailFrame]]">Descargar&nbsp;<i class="fa fa-cloud-download fa-lg"></i></a>
-            <a class="btn btn-default" target="_blank" ng-href="[[detailFrame]]">Abrir en nueva pestaña&nbsp;<i class="fa fa-external-link fa-lg"></i></a>
-            <iframe ng-init="initChapterSelected();" ng-src="[[chapterSelected]]" name="viewer" id="viewer" width='100%' height='500px' allowfullscreen></iframe>
+            <a class="btn btn-default" download ng-href="[[chapterSelected]]">Descargar&nbsp;<i class="fa fa-cloud-download fa-lg"></i></a>
+            <a class="btn btn-default" target="_blank" ng-href="[[chapterSelected]]">Abrir en nueva pestaña&nbsp;<i class="fa fa-external-link fa-lg"></i></a>
+            <iframe ng-init="initChapterSelected();" ng-src="[[chapterSelected.url]]" name="viewer" id="viewer" width='100%' height='500px'></iframe>
             
         </div>
     </div>
@@ -92,7 +93,7 @@
 <input type="text" ng-model="detailFrame" />
 
 <span>detail:[[detailFrame]]</span>
-<span>select:[[chapterSelected]]</span>
+<span>select:|[[chapterSelected]]|</span>
 {% endblock %}
 {% block javascripts %}
     {{ parent() }}
